# economic_analysis

backend/: .gitignore  db.py  main.py  pyproject.toml  schemas.py  security.py
backend/database/: models.py
backend/routers/: auth.py  budgeting.py  cost_estimation.py  project.py  resource_allocation.py  risk_management.py
frontend/: package.json
frontend/app/: globals.css  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: BudgetAnalysisSummary.tsx  BudgetComparison.tsx  BudgetTrackingModule.tsx  CostEstimationModule.tsx  DashboardBudgetOverview.tsx  DebugAuth.tsx  FinancialMetricsModule.tsx  ProjectEstimation.tsx  ProjectManagement.tsx  ResourceOptimizationModule.tsx  RiskManagementModule.tsx
frontend/lib/: auth.ts
